fixed screen shift issue in nav bar. altered coordinates in map layer

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -13,16 +13,9 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
 * {
   box-sizing: border-box;
